--- a/OnlineMovieBooking.Domain/OnlineMovieBooking.Domain.csproj
+++ b/OnlineMovieBooking.Domain/OnlineMovieBooking.Domain.csproj
@@ -41,10 +41,14 @@
       <HintPath>..\packages\EntityFramework.6.4.4\lib\net45\EntityFramework.SqlServer.dll</HintPath>
     </Reference>
     <Reference Include="System" />
+    <Reference Include="System.Activities" />
     <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Configuration" />
+    <Reference Include="System.Configuration.Install" />
     <Reference Include="System.Core" />
     <Reference Include="System.Data.Entity" />
+    <Reference Include="System.Data.Entity.Design" />
+    <Reference Include="System.Data.Linq" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -139,12 +143,16 @@
     <Compile Include="Services\Show\IShowQueryService.cs" />
     <Compile Include="Services\Show\ShowCommandService.cs" />
     <Compile Include="Services\Show\ShowQueryService.cs" />
+    <Compile Include="Services\UserServices\User\UserCommandService\IUserCommandService.cs" />
+    <Compile Include="Services\UserServices\User\UserCommandService\UserCommandService.cs" />
     <Compile Include="Services\User\IUserCommandService.cs" />
     <Compile Include="Services\User\IUserQueryService.cs" />
     <Compile Include="Services\User\UserCommandService.cs" />
     <Compile Include="Services\User\UserQueryService.cs" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Folder Include="Services\UserServices\User\UserQueryService\" />
+  </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
     <None Include="packages.config" />
