done with user proxy and made some command and queryservices

--- a/OnlineMovieBooking.Domain/OnlineMovieBooking.Domain.csproj
+++ b/OnlineMovieBooking.Domain/OnlineMovieBooking.Domain.csproj
@@ -103,54 +103,86 @@
     <Compile Include="Repository\ShowRepository.cs" />
     <Compile Include="Repository\ShowSeatRepository.cs" />
     <Compile Include="Repository\UserRepository.cs" />
-    <Compile Include="Services\Booking\BookingCommandService.cs" />
-    <Compile Include="Services\Booking\BookingQueryService.cs" />
-    <Compile Include="Services\Booking\IBookingCommandService.cs" />
-    <Compile Include="Services\Booking\IBookingQueryService.cs" />
-    <Compile Include="Services\CinemaHall\CinemaHallCommandService.cs" />
-    <Compile Include="Services\CinemaHall\CinemaHallQueryService.cs" />
-    <Compile Include="Services\CinemaHall\ICinemaHallCommandService.cs" />
-    <Compile Include="Services\CinemaHall\ICinemaHallQueryService.cs" />
-    <Compile Include="Services\CinemaSeat\CinemaSeatCommandService.cs" />
-    <Compile Include="Services\CinemaSeat\CinemaSeatQueryService.cs" />
-    <Compile Include="Services\CinemaSeat\ICinemaSeatCommandService.cs" />
-    <Compile Include="Services\CinemaSeat\ICinemaSeatQueryService.cs" />
-    <Compile Include="Services\Cinema\CinemaCommandService.cs" />
-    <Compile Include="Services\Cinema\CinemaQueryService.cs" />
-    <Compile Include="Services\Cinema\ICinemaCommandService.cs" />
-    <Compile Include="Services\Cinema\ICinemaQueryService.cs" />
-    <Compile Include="Services\City\CityCommandService.cs" />
-    <Compile Include="Services\City\CityQueryService.cs" />
-    <Compile Include="Services\City\ICityCommandService.cs" />
-    <Compile Include="Services\City\ICityQueryService.cs" />
-    <Compile Include="Services\Feedback\FeedbackCommandService.cs" />
-    <Compile Include="Services\Feedback\FeedbackQueryService.cs" />
-    <Compile Include="Services\Feedback\IFeedbackCommandService.cs" />
-    <Compile Include="Services\Feedback\IFeedbackQueryService.cs" />
-    <Compile Include="Services\Movie\IMovieCommandService.cs" />
-    <Compile Include="Services\Movie\IMovieQueryService.cs" />
-    <Compile Include="Services\Movie\MovieCommandService.cs" />
-    <Compile Include="Services\Movie\MovieQueryService.cs" />
-    <Compile Include="Services\Payment\IPaymentCommandService.cs" />
-    <Compile Include="Services\Payment\IPaymentQueryService.cs" />
-    <Compile Include="Services\Payment\PaymentCommandService.cs" />
-    <Compile Include="Services\Payment\PaymentQueryService.cs" />
-    <Compile Include="Services\ShowSeat\IShowSeatCommandService.cs" />
-    <Compile Include="Services\ShowSeat\IShowSeatQueryService.cs" />
-    <Compile Include="Services\ShowSeat\ShowSeatCommandService.cs" />
-    <Compile Include="Services\ShowSeat\ShowSeatQueryService.cs" />
+    <Compile Include="Services\BookingService\BookingCommandService.cs" />
+    <Compile Include="Services\BookingService\BookingQueryService.cs" />
+    <Compile Include="Services\BookingService\IBookingCommandService.cs" />
+    <Compile Include="Services\BookingService\IBookingQueryService.cs" />
+    <Compile Include="Services\CinemaHallService\CinemaHallCommandService.cs" />
+    <Compile Include="Services\CinemaHallService\CinemaHallQueryService.cs" />
+    <Compile Include="Services\CinemaHallService\ICinemaHallCommandService.cs" />
+    <Compile Include="Services\CinemaHallService\ICinemaHallQueryService.cs" />
+    <Compile Include="Services\CinemaSeatService\CinemaSeatCommandService.cs" />
+    <Compile Include="Services\CinemaSeatService\CinemaSeatQueryService.cs" />
+    <Compile Include="Services\CinemaSeatService\ICinemaSeatCommandService.cs" />
+    <Compile Include="Services\CinemaSeatService\ICinemaSeatQueryService.cs" />
+    <Compile Include="Services\CinemaService\CinemaCommandService.cs" />
+    <Compile Include="Services\CinemaService\CinemaQueryService.cs" />
+    <Compile Include="Services\CinemaService\ICinemaCommandService.cs" />
+    <Compile Include="Services\CinemaService\ICinemaQueryService.cs" />
+    <Compile Include="Services\CityService\CityCommandService.cs" />
+    <Compile Include="Services\CityService\CityQueryService.cs" />
+    <Compile Include="Services\CityService\ICityCommandService.cs" />
+    <Compile Include="Services\CityService\ICityQueryService.cs" />
+    <Compile Include="Services\FeedbackService\FeedbackCommandService.cs" />
+    <Compile Include="Services\FeedbackService\FeedbackQueryService.cs" />
+    <Compile Include="Services\FeedbackService\IFeedbackCommandService.cs" />
+    <Compile Include="Services\FeedbackService\IFeedbackQueryService.cs" />
+    <Compile Include="Services\MovieService\IMovieCommandService.cs" />
+    <Compile Include="Services\MovieService\IMovieQueryService.cs" />
+    <Compile Include="Services\MovieService\MovieCommandService.cs" />
+    <Compile Include="Services\MovieService\MovieQueryService.cs" />
+    <Compile Include="Services\PaymentService\IPaymentCommandService.cs" />
+    <Compile Include="Services\PaymentService\IPaymentQueryService.cs" />
+    <Compile Include="Services\PaymentService\PaymentCommandService.cs" />
+    <Compile Include="Services\PaymentService\PaymentQueryService.cs" />
+    <Compile Include="Services\ShowSeatService\IShowSeatCommandService.cs" />
+    <Compile Include="Services\ShowSeatService\IShowSeatQueryService.cs" />
+    <Compile Include="Services\ShowSeatService\ShowSeatCommandService.cs" />
+    <Compile Include="Services\ShowSeatService\ShowSeatQueryService.cs" />
+    <Compile Include="Services\ShowService\IShowCommandService.cs" />
+    <Compile Include="Services\ShowService\IShowQueryService.cs" />
+    <Compile Include="Services\ShowService\ShowCommandService.cs" />
+    <Compile Include="Services\ShowService\ShowQueryService.cs" />
     <Compile Include="Services\Show\IShowCommandService.cs" />
     <Compile Include="Services\Show\IShowQueryService.cs" />
     <Compile Include="Services\Show\ShowCommandService.cs" />
     <Compile Include="Services\Show\ShowQueryService.cs" />
-    <Compile Include="Services\UserServices\User\UserCommandService\IUserCommandService.cs" />
-    <Compile Include="Services\UserServices\User\UserCommandService\UserCommandService.cs" />
+    <Compile Include="Services\UserServices\BookingService\BookingQueryService\BookingQueryService.cs" />
+    <Compile Include="Services\UserServices\BookingService\BookingQueryService\IBookingQueryService.cs" />
+    <Compile Include="Services\UserServices\CinemaHallService\CinemaHallQueryService\CinemaHallQueryService.cs" />
+    <Compile Include="Services\UserServices\CinemaHallService\CinemaHallQueryService\ICinemaHallQueryService.cs" />
+    <Compile Include="Services\UserServices\CinemaSeatService\CinemaSeatQueryService\CinemaSeatQueryService.cs" />
+    <Compile Include="Services\UserServices\CinemaSeatService\CinemaSeatQueryService\ICinemaSeatQueryService.cs" />
+    <Compile Include="Services\UserServices\CinemaService\CinemaQueryService\CinemaQueryService.cs" />
+    <Compile Include="Services\UserServices\CinemaService\CinemaQueryService\ICinemaQueryService.cs" />
+    <Compile Include="Services\UserServices\CityService\CityQueryService\CityQueryService.cs" />
+    <Compile Include="Services\UserServices\CityService\CityQueryService\ICityQueryService.cs" />
+    <Compile Include="Services\UserServices\FeedbackService\FeedbackCommandService\FeedbackCommandService.cs" />
+    <Compile Include="Services\UserServices\FeedbackService\FeedbackCommandService\IFeedbackCommandService.cs" />
+    <Compile Include="Services\UserServices\FeedbackService\FeedbackQueryService\FeedbackQueryService.cs" />
+    <Compile Include="Services\UserServices\FeedbackService\FeedbackQueryService\IFeedbackQueryService.cs" />
+    <Compile Include="Services\UserServices\MovieService\MovieQueryService\IMovieQueryService.cs" />
+    <Compile Include="Services\UserServices\MovieService\MovieQueryService\MovieQueryService.cs" />
+    <Compile Include="Services\UserServices\PaymentService\PaymentCommandService\IPaymentCommandService.cs" />
+    <Compile Include="Services\UserServices\PaymentService\PaymentCommandService\PaymentCommandService.cs" />
+    <Compile Include="Services\UserServices\PaymentService\PaymentQueryService\IPaymentQueryService.cs" />
+    <Compile Include="Services\UserServices\PaymentService\PaymentQueryService\PaymentQueryService.cs" />
+    <Compile Include="Services\UserServices\ShowSeatService\ShowSeatQueryService\IShowSeatQueryService.cs" />
+    <Compile Include="Services\UserServices\ShowSeatService\ShowSeatQueryService\ShowSeatQueryService.cs" />
+    <Compile Include="Services\UserServices\ShowService\ShowQueryService\IShowQueryService.cs" />
+    <Compile Include="Services\UserServices\ShowService\ShowQueryService\ShowQueryService.cs" />
+    <Compile Include="Services\UserServices\UserService\UserCommandService\IUserCommandService.cs" />
+    <Compile Include="Services\UserServices\UserService\UserCommandService\UserCommandService.cs" />
+    <Compile Include="Services\UserServices\UserService\UserQueryService\IUserQueryService.cs" />
+    <Compile Include="Services\UserServices\UserService\UserQueryService\UserQueryService.cs" />
     <Compile Include="Services\UserService\IUserCommandService.cs" />
     <Compile Include="Services\UserService\IUserQueryService.cs" />
     <Compile Include="Services\UserService\UserCommandService.cs" />
     <Compile Include="Services\UserService\UserQueryService.cs" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Folder Include="Services\UserServices\User\" />
+  </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
     <None Include="packages.config" />
