--- a/OnlineMovieBooking.Domain/OnlineMovieBooking.Domain.csproj
+++ b/OnlineMovieBooking.Domain/OnlineMovieBooking.Domain.csproj
@@ -176,9 +176,7 @@
     <Compile Include="Services\UserService\UserCommandService.cs" />
     <Compile Include="Services\UserService\UserQueryService.cs" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Services\UserServices\User\" />
-  </ItemGroup>
+  <ItemGroup />
   <ItemGroup>
     <None Include="App.config" />
     <None Include="packages.config" />
