--- a/OnlineMovieBooking/OnlineMovieBooking.csproj
+++ b/OnlineMovieBooking/OnlineMovieBooking.csproj
@@ -235,6 +235,15 @@
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
     <Content Include="Content\Site.css" />
+    <Content Include="movieinfo\cast\cast1.png" />
+    <Content Include="movieinfo\cast\cast2.png" />
+    <Content Include="movieinfo\cast\cast3.png" />
+    <Content Include="movieinfo\cast\cast4.png" />
+    <Content Include="movieinfo\crew\crew1.png" />
+    <Content Include="movieinfo\crew\crew2.png" />
+    <Content Include="movieinfo\crew\crew3.png" />
+    <Content Include="movieinfo\crew\crew4.png" />
+    <Content Include="movieinfo\movie1.jpg" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
     <None Include="Scripts\jquery-3.4.1.intellisense.js" />
@@ -325,12 +334,12 @@
     <Content Include="Views\UserMovie\AddFeedBack.cshtml" />
     <Content Include="Views\UserLogin\Login.cshtml" />
     <Content Include="Views\UserLogin\SignUp.cshtml" />
+    <Content Include="Views\Movie\MovieInfo.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
     <Folder Include="Images\Movies\" />
     <Folder Include="Views\Default\" />
-    <Folder Include="Views\Movie\" />
     <Folder Include="Views\User_Login\" />
   </ItemGroup>
   <ItemGroup>
