removed foreignkey showid in payments table to avoid any circlular errors modified all the layers as well

--- a/OnlineMovieBooking/OnlineMovieBooking.csproj
+++ b/OnlineMovieBooking/OnlineMovieBooking.csproj
@@ -292,6 +292,7 @@
     <Content Include="Views\UserLogin\SignUp.cshtml" />
     <Content Include="Views\Movie\MovieInfo.cshtml" />
     <Content Include="Views\Shared\PartialAdminPanel.cshtml" />
+    <Content Include="Views\Movie\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
