--- a/OnlineMovieBooking.Domain/OnlineMovieBooking.Domain.csproj
+++ b/OnlineMovieBooking.Domain/OnlineMovieBooking.Domain.csproj
@@ -64,6 +64,15 @@
     <Compile Include="DTO\Show.cs" />
     <Compile Include="DTO\ShowSeat.cs" />
     <Compile Include="DTO\User.cs" />
+    <Compile Include="Migrations\202107250337126_DeletedUnwantedTables.cs" />
+    <Compile Include="Migrations\202107250337126_DeletedUnwantedTables.designer.cs">
+      <DependentUpon>202107250337126_DeletedUnwantedTables.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\202107250357117_DeletedShowIdInPayment.cs" />
+    <Compile Include="Migrations\202107250357117_DeletedShowIdInPayment.designer.cs">
+      <DependentUpon>202107250357117_DeletedShowIdInPayment.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repository\CinemaHallRepository.cs" />
     <Compile Include="Repository\IPaymentRepository.cs" />
@@ -136,7 +145,14 @@
     <Compile Include="Services\UserService\UserCommandService.cs" />
     <Compile Include="Services\UserService\UserQueryService.cs" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <EmbeddedResource Include="Migrations\202107250337126_DeletedUnwantedTables.resx">
+      <DependentUpon>202107250337126_DeletedUnwantedTables.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202107250357117_DeletedShowIdInPayment.resx">
+      <DependentUpon>202107250357117_DeletedShowIdInPayment.cs</DependentUpon>
+    </EmbeddedResource>
+  </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
     <None Include="packages.config" />
