--- a/OnlineMovieBooking/OnlineMovieBooking.csproj
+++ b/OnlineMovieBooking/OnlineMovieBooking.csproj
@@ -207,6 +207,8 @@
     <Content Include="Content\bootstrap-theme.min.css" />
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
+    <Content Include="Content\LoginStyle.css" />
+    <Content Include="Content\UserInterfaceStyle.css" />
     <Content Include="favicon.ico" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
@@ -273,7 +275,6 @@
     <Content Include="Views\ShowSeats\Details.cshtml" />
     <Content Include="Views\ShowSeats\Edit.cshtml" />
     <Content Include="Views\ShowSeats\Index.cshtml" />
-    <Content Include="Views\Payments\Create.cshtml" />
     <Content Include="Views\Payments\Details.cshtml" />
     <Content Include="Views\Payments\Index.cshtml" />
     <Content Include="Views\Feedbacks\Delete.cshtml" />
