added movie details

--- a/OnlineMovieBooking/OnlineMovieBooking.csproj
+++ b/OnlineMovieBooking/OnlineMovieBooking.csproj
@@ -222,6 +222,24 @@
     <Content Include="movieinfo\crew\crew3.png" />
     <Content Include="movieinfo\crew\crew4.png" />
     <Content Include="movieinfo\movie1.jpg" />
+    <Content Include="moviesimage\movie1\cast\cast1.png" />
+    <Content Include="moviesimage\movie1\cast\cast2.png" />
+    <Content Include="moviesimage\movie1\cast\cast3.png" />
+    <Content Include="moviesimage\movie1\cast\cast4.png" />
+    <Content Include="moviesimage\movie1\crew\crew1.png" />
+    <Content Include="moviesimage\movie1\crew\crew2.png" />
+    <Content Include="moviesimage\movie1\crew\crew3.png" />
+    <Content Include="moviesimage\movie1\crew\crew4.png" />
+    <Content Include="moviesimage\movie1\movie1.jpg" />
+    <Content Include="moviesimage\movie2\cast\cast1.jpg" />
+    <Content Include="moviesimage\movie2\cast\cast2.jpg" />
+    <Content Include="moviesimage\movie2\cast\cast3.jpg" />
+    <Content Include="moviesimage\movie2\cast\cast4.jpg" />
+    <Content Include="moviesimage\movie2\crew\crew1.jpg" />
+    <Content Include="moviesimage\movie2\crew\crew2.jpg" />
+    <Content Include="moviesimage\movie2\crew\crew3.jpg" />
+    <Content Include="moviesimage\movie2\crew\crew4.jpg" />
+    <Content Include="moviesimage\movie2\movie2.jpg" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
     <None Include="Scripts\jquery-3.4.1.intellisense.js" />
