--- a/OnlineMovieBooking/OnlineMovieBooking.csproj
+++ b/OnlineMovieBooking/OnlineMovieBooking.csproj
@@ -312,6 +312,7 @@
     <Content Include="Views\UserMovieSelection\CinemaHall.cshtml" />
     <Content Include="Views\UserMovieSelection\SelectShowByCinemaHall.cshtml" />
     <Content Include="Views\UserInterfaceHome\Home.cshtml" />
+    <Content Include="Views\UserMovieSelection\SelectSeatByShow.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
