select seat added

--- a/OnlineMovieBooking/OnlineMovieBooking.csproj
+++ b/OnlineMovieBooking/OnlineMovieBooking.csproj
@@ -313,6 +313,8 @@
     <Content Include="Views\UserMovieSelection\SelectShowByCinemaHall.cshtml" />
     <Content Include="Views\UserInterfaceHome\Home.cshtml" />
     <Content Include="Views\UserMovieSelection\SelectSeatByShow.cshtml" />
+    <Content Include="Views\UserMovieSelection\GetNonReserved.cshtml" />
+    <Content Include="Views\UserMovieSelection\SelectSeat.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
